// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantListEditorHeader should hide grant agency type input 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Grant name
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor ID
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-tuaig4-MuiGridLegacy-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-13aaf6f-MuiGridLegacy-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorHeader should render default mobile view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Grant name
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor ID
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor type
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-tuaig4-MuiGridLegacy-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorHeader should render default mobile view 2`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Grant name
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor ID
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor type
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-tuaig4-MuiGridLegacy-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorHeader should render default view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Grant name
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor ID
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor type
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-tuaig4-MuiGridLegacy-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-13aaf6f-MuiGridLegacy-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorHeader should render with default props 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Grant name
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor ID
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor type
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-tuaig4-MuiGridLegacy-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-13aaf6f-MuiGridLegacy-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorHeader should show confirmation box 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1ulijmd-MuiListItem-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-10 MuiGridLegacy-grid-sm-11 MuiGridLegacy-grid-md-9 css-1m59ukm-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-5 css-1h9qchl-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Grant name
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-3 css-1oeuqeq-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor ID
              </span>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-sm-4 css-1dt03kf-MuiGridLegacy-root"
          >
            <div
              class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
              style="padding: 0px;"
            >
              <span
                class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
              >
                Funder/sponsor type
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-2 MuiGridLegacy-grid-sm-1 MuiGridLegacy-grid-md-3 css-yuldl1-MuiGridLegacy-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-8 css-tuaig4-MuiGridLegacy-root"
            >
              <div
                class="MuiListItemText-root css-1bfygtv-MuiListItemText-root"
                style="padding: 0px;"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption MuiListItemText-secondary css-rnevh8-MuiTypography-root"
                >
                  Reorder entries
                </span>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-4 css-13aaf6f-MuiGridLegacy-root"
              style="text-align: right;"
            >
              <div
                aria-label="Remove all entries"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove all entries"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteForeverIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zm2.46-7.12 1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
